[package]
name = "scumbo"
version = "0.1.0"
edition = "2024"

[dependencies]
dotenv = "0.15.0"
parking_lot = "0.12.5"
poise = "0.6"
songbird = "0.5"
reqwest = "0.12"
rand = "0.9"

[dependencies.tokio]
version = "1"
features = ["macros", "rt-multi-thread"]

[dependencies.serenity]
version = "0.12"
features = ["full"]

[dependencies.symphonia]
version = "0.5"
features = ["aac", "mp3", "alac"]
